--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
 }
 
 body {
@@ -169,13 +169,63 @@ a {
     background: var(--primary-color);
   }
 
-  .header__menu {
+  /* .header__menu {
     display: none;
-  }
+  } */
 
   .header__menu-mobile {
     display: flex;
   }
+
+  .main-nav {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 70%;
+    height: 100vh;
+    transform: translateX(100%);
+    z-index: 999;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s ease-in;
+
+    /* Hide navigation */
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+  }
+
+  .nav-open .main-nav {
+    background-color: rgba(255, 255, 255, 0.9);
+    backdrop-filter: blur(2px);
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    transform: translateX(0);
+  }
+
+  .nav-open .close__btn {
+    display: block;
+  }
+
+  .nav-open .menu__btn {
+    display: none;
+  }
+
+  .header__menu{
+    flex-direction: column;
+    gap: 64px;
+  }
+
+  .header__menu a:link{
+    font-size: 30px;
+  }
+
+  .header__menu img{
+    display: none
+  };
 }
 
 @media screen and (max-width: 550px) {
